# axon

./: .gitignore  AGENT_TEST_SUMMARY.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LAUNCH.md  POST.md  README.md  ROADMAP.md  SECURITY.md  agent_behavior_report.md  agent_value_scorecard.md  app_dev_ab_report.md  axon-linkedin-carousel.tsx  carousel-pdf-export.html  demo.tape  export-slides.mjs  package-lock.json
.claude/: settings.json
.claude/commands/: behavior-test.md  blame.md  build.md  comparative-test.md  diagnose.md  e2e.md  eval-axon.md  eval.md  fix-bug.md  health.md  mcp-test.md  release-check.md  snapshot.md  status.md  stress-test.md  webhook-test.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
agent_behavior_test_results/: test_summary.json
agent_behavior_test_results/phase_1_baseline/: metrics.json  phase_summary.json  task_stats.json
agent_behavior_test_results/phase_2_stress/: metrics.json  phase_summary.json  task_stats.json
agent_behavior_test_results/phase_3_adaptation/: decisions.json  metrics.json  phase_summary.json  task_stats.json
agent_behavior_test_results/phase_4_cooloff/: metrics.json  phase_summary.json  task_stats.json
comparative_stress_test_results/: comparison_metrics.json  comparison_report.md
comparative_stress_test_results/scenario_a_blind/: agent_results.json  metrics.json  responsiveness.json
comparative_stress_test_results/scenario_b_axon_informed/: agent_results.json  (+5 more)
crates/axon-cli/: Cargo.toml
crates/axon-cli/src/: main.rs
crates/axon-cli/tests/: agent_loop.rs  alert_db.rs  live_hardware_alert.rs  mcp_protocol.rs  perf_scenario.rs  serve_cli.rs  setup_uninstall.rs  smoke.rs  webhook_dispatch_smoke.rs
crates/axon-core/: Cargo.toml
crates/axon-core/src/: agent_runtime.rs  alert_config.rs  alert_dispatch.rs  alerts.rs  collector.rs  ewma.rs  gpu.rs  grouping.rs  impact.rs  lib.rs  persistence.rs  probe.rs  ring_buffer.rs  temperature.rs  thresholds.rs  types.rs  webhooks.rs
crates/axon-core/tests/: alert_integration.rs
crates/axon-server/: Cargo.toml
crates/axon-server/src/: dashboard.rs  lib.rs
crates/mcp-station-cli/: Cargo.toml
crates/mcp-station-cli/src/: main.rs
crates/mcp-station-server/: Cargo.toml
crates/mcp-station-server/src/: lib.rs
dashboard/: bench.sh  index.html
docs/: 404.html  agent-platform-demo.html  agent-platform-demo.md  analysis-app-development.html  app-development-ab-analysis.html  app-development-ab-analysis.md  axon-caught-live.html  axon-caught-live.md  github-issue-comments.html  github-issue-comments.md  index.html  issue-coverage-analysis.html  issue-coverage-analysis.md  problem-validation.html  problem-validation.md  roadmap.html  roadmap.md  robots.txt  showcase-article.md  sitemap.xml  testing-guide.html  testing-guide.md  value-scorecard.html  value-scorecard.md
scripts/: agent_behavior_test.py  alert_receiver_minimal.py  async_queue_task.py  axon_aware_workload_runner.py  axon_value_scorecard.py  comparative_stress_test.py  compare_app_dev_with_without_axon.py  demo_agent_platform_live.py  demo_agent_value_live.py  demo_mcp_init.sh  e2e-mcp-and-webhook.sh  e2e-real-scenario.sh  e2e-webhook-cli-override.sh  e2e-webhook-config-file.sh  eval_cpu_stress.py  generate_behavior_report.py  mcp-call.sh  mcp_exercise_all_tools.py  metrics_collector.py  perf_proxy_task.sh  perf_report.py  perf_test_scenario.py  phase_report_visualizer.py  report_visualizer.py  responsiveness_tester.py  speed_eval.py  stress_report_generator.py  stress_test_demo.py  test_agent_policy_real_usecases_live.py  test_agent_runtime_duplicate_mcp_live.py  test_agent_uses_axon_gate_live.py  test_agent_workflows_live.py  test_alert_webhooks_live.py  webhook_receiver.py  windows_stress_eval.py
tapes/: demo-alerts-config.tape  demo-alerts-live.tape  demo-alerts-query.tape  demo-detect.tape  demo-setup.tape  demo.tape
(+9 files in other folders)
