[workspace]
members = [
    "crates/mcp-station-core",
    "crates/mcp-station-server",
    "crates/mcp-station-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rudraptpsingh/mcp-station"
description = "Local hardware intelligence for AI coding agents"
authors = ["Rudra Pratap Singh"]
