[workspace]
members = [
    "crates/axon-core",
    "crates/axon-server",
    "crates/axon-cli",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/rudraptpsingh/axon"
description = "Local hardware intelligence for AI coding agents"
authors = ["Rudra Pratap Singh"]
