[package]
name = "axon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "axon"
path = "src/main.rs"

[dependencies]
axon-core = { path = "../axon-core" }
axon-server = { path = "../axon-server" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
