[package]
name = "axon-core"
version.workspace = true
edition.workspace = true

[dependencies]
sysinfo = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
