[package]
name = "axon-core"
version.workspace = true
edition.workspace = true

[dependencies]
sysinfo = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
