[package]
name = "axon-server"
version.workspace = true
edition.workspace = true

[lib]
name = "axon_server"

[dependencies]
axon-core = { path = "../axon-core" }
rmcp = { version = "1", features = ["server"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
