[package]
name = "mcp-station"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mcp-station"
path = "src/main.rs"

[dependencies]
mcp-station-core = { path = "../mcp-station-core" }
mcp-station-server = { path = "../mcp-station-server" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
